--- a/ControlTemplateSample/Views/Templates/TemplateOne.xaml
+++ b/ControlTemplateSample/Views/Templates/TemplateOne.xaml
@@ -5,11 +5,12 @@
      <Grid.RowDefinitions>
         <RowDefinition Height="Auto"/>
         <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
          <RowDefinition Height="Auto"/>
     </Grid.RowDefinitions>
-    
-     <ContentPresenter Grid.Row="0" />
-     <Image Grid.Row="1" HorizontalOptions="Center" Source="ic_launcher" />
-     <Label HorizontalOptions="CenterAndExpand" FontSize="Large" Grid.Row="2" Text="{TemplateBinding BindingContext.Message}"/>
+     <Label  Grid.Row="0" Font="Bold" HorizontalOptions="CenterAndExpand" FontSize="Large" Text="Template 1"/>
+     <ContentPresenter Grid.Row="1" />
+     <Slider Grid.Row="2" Maximum="40"  Minimum="20" Value="{TemplateBinding BindingContext.Size}" />
+     <Label HorizontalOptions="CenterAndExpand" FontSize="{TemplateBinding BindingContext.Size}" Grid.Row="3" Text="{TemplateBinding BindingContext.Message}"/>
     
 </Grid>
